--- a/scratch.html
+++ b/scratch.html
@@ -60,7 +60,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="container">
         <section>
             <h1 class="cool-letter">Presenting... Nure's games!</h1>
             <p>This is a block of all my best games of scratch. I wish for you to enjoy them!</p>
@@ -98,24 +98,23 @@
         </section>
         <section>
             <h2 class="cool-letter">Scratch Games</h2>
-        </section>
-        <div class="row">
-            <div class="col">
-                <h3 id="the_final_exam">The final exam</h3>
+            <div class="row">
+                <div class="col">
+                    <h3 id="the_final_exam">The final exam</h3>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-auto col-md-3">
-                <img class="img-fluid" src="assets\images\Captura examen.PNG" alt="The final exam being played">
+            <div class="row">
+                <div class="col-auto col-md-3">
+                    <img class="img-fluid" src="assets\images\Captura examen.PNG" alt="The final exam being played">
+                </div>
+                <div class="col-auto col-md-9">
+                    <p>You can play the final exam by moving with the arrows the Little Red Square.Your
+                        objective<br>
+                        is to get to the Green Space to pass the game. Don't forget to get the key before and
+                        never touch blue!
+                    </p>
+                </div>
             </div>
-            <div class="col-auto col-md-9">
-                <p>You can play the final exam by moving with the arrows the Little Red Square.Your
-                    objective<br>
-                    is to get to the Green Space to pass the game. Don't forget to get the key before and
-                    never touch blue!
-                </p>
-            </div>
-        </div>
         </section>
         <section>
             <div class="row">
