--- a/about.html
+++ b/about.html
@@ -48,22 +48,37 @@
             </div>
         </div>
     </nav>
-    <section>
-        <h1>About me</h1>
-    </section>
-    <section>
-        <p>
-            Dear users, welcome to my page. Here, I will principally talk about me.
-        </p>
-        <img class="img-fluid, max-width" src="assets\images\20231013_161239.jpg" alt="me">
-        <p>
-            Hi, mi name is Nuredin Mihran Mamprelian. I live in C.A.B.A., Buenos Aires, Argentina and I am 12 years.<br>
-            Also, my favorite food is gnocchi and the color I most like is yellow.
-        </p>
-    </section>
+    <main class="container">
+        <section>
+            <div class="row">
+                <div class="col-auto">
+                    <h1>About me</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-auto p-0">
+
+                    <img class="img-fluid" src="assets\images\20231013_161239.jpg" alt="me">
+                </div>
+                <div class="col-auto">
+                    <p>
+                        Dear users, welcome to my page. Here, I will principally talk about me.
+                    </p>
+                </div>
+                <div class="col-auto">
+                    <p>
+                        Hi, mi name is Nuredin Mihran Mamprelian. I live in C.A.B.A., Buenos Aires, Argentina
+                        and I am 12 years.<br>
+                        Also, my favorite food is gnocchi and the color I most like is yellow.
+                    </p>
+                </div>
+            </div>
+        </section>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+
 </body>
 
 </html>\
