--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="container">
         <section>
             <h1 class="cool-letter">Presenting... Nure's games!</h1>
             <p>This is a block of all my best games, from scratch to c++. I wish for you to enjoy them!</p>
