--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="assets\css\style.css">
 </head>
 
-<body class="bg-primary">
+<body class="bg-primary container">
     <nav class="navbar navbar-expand-lg g-light bg-primary">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html"><img id="logo" src="assets\images\logo.jpg" alt="logo image">
@@ -48,7 +48,7 @@
             </div>
         </div>
     </nav>
-    <main class="container">
+    <main>
         <section>
             <div class="row">
                 <div class="col-auto">
