--- a/scratch.html
+++ b/scratch.html
@@ -60,9 +60,9 @@
         </nav>
     </header>
 
-    <main class="container">
+    <main>
         <section>
-            <h1 class="cool-letter">Presenting... Nure's games!</h1>
+            <h1 class="cool-letter">Presenting... scratch games!</h1>
             <p>This is a block of all my best games of scratch. I wish for you to enjoy them!</p>
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
                 <div class="carousel-indicators">
