created mayor etc link. js added

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
             <div class="row">
                 <div class="col-auto">
-                    <h3 id="mayor-o-menor">Mayor o menor</h3>
+                    <h3 id="mayor-o-menor"><a href="mayormenor.html">Mayor o menor</a></h3>
                 </div>
             </div>
             <div class="row">
@@ -152,9 +152,8 @@
                     <img class="img-fluid" src="assets\images\mayor.png" alt="Mayor o menor being used">
                 </div>
                 <div class="col-auto col-md-9">
-                    <p>These time, my project isn't a game, this is how it works: you enter three random numbers
-                        in<br>
-                        the computer, and then, it should appear first the smallest number, and then, biggest
+                    <p>These time, my project isn't a game, this is how it works: you enter three random numbers<br>
+                        in the computer, and then, it should appear first the smallest number, and then, biggest
                         one.
                     </p>
                 </div>
