--- a/mayormenor.html
+++ b/mayormenor.html
@@ -124,7 +124,7 @@
       <form>
         <input type="number" name="num1" id="num1" />
         <input type="number" name="num2" id="num2" />
-        <input type="button" id="run-game" value="Submit" />
+        <input type="submit" id="run-game" value="Submit" />
       </form>
     </section>
     <script
