--- a/mayormenor.html
+++ b/mayormenor.html
@@ -126,6 +126,7 @@
         <input type="number" name="num2" id="num2" />
         <input type="submit" id="run-game" value="Submit" />
       </form>
+      <p id="answer"></p>
     </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
