--- a/tres_en_lines.html
+++ b/tres_en_lines.html
@@ -97,7 +97,7 @@
             ><img id="logo" src="assets\images\logo.jpg" alt="logo image" />
           </a>
           <button
-            class="btn btn-outline-info"
+            class="navbar-toggler"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarNav"
@@ -120,39 +120,11 @@
         </div>
       </nav>
     </header>
-    <section>
-      <p class="fw-semibold" class="lh-base">
-        Enter two numbers, this program will tell you wich one is bigger. <br />
-        Press SUBMIT when you'r finished.
-      </p>
-    </section>
-    <section>
-      <form>
-        <input
-          type="number"
-          name="num1"
-          value="0"
-          id="num1"
-          required
-          minlength="1"
-        />
-        <input
-          type="number"
-          name="num2"
-          value="0"
-          id="num2"
-          required
-          minlength="1"
-        />
-        <input type="submit" id="run-game" value="Submit" />
-      </form>
-      <p id="answer"></p>
-    </section>
+    <main></main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-    <script src="assets\js\mayorEtc.js"></script>
   </body>
 </html>
