--- a/tres_en_lines.html
+++ b/tres_en_lines.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mayor o menor</title>
+    <title>Tic-tac-toe</title>
     <link
       rel="apple-touch-icon"
       sizes="57x57"
@@ -120,11 +120,35 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section>
+        <div
+          id="game-grid"
+          class="container text-center d-flex flex-column justify-content-around"
+        >
+          <div class="row align-content-around h-100">
+            <div class="col h-100" id="box0"></div>
+            <div class="col h-100" id="box1"></div>
+            <div class="col h-100" id="box2"></div>
+          </div>
+          <div class="row align-content-around h-100">
+            <div class="col h-100" id="box3"></div>
+            <div class="col h-100" id="box4"></div>
+            <div class="col h-100" id="box5"></div>
+          </div>
+          <div class="row align-content-around h-100">
+            <div class="col h-100" id="box6"></div>
+            <div class="col h-100" id="box7"></div>
+            <div class="col h-100" id="box8"></div>
+          </div>
+        </div>
+      </section>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+    <script src="assets\js\tresEnLinea.js"></script>
   </body>
 </html>
