--- a/tres_en_lines.html
+++ b/tres_en_lines.html
@@ -122,6 +122,15 @@
     </header>
     <main>
       <section>
+        <div class="fw-semibold" class="col-auto col-md-9">
+          <p>
+            Tic-tac-toe is a two player game by turns in wich your objetive
+            is<br />
+            to make a three spacesline, vertical, horisontal, or even diagonal.
+          </p>
+        </div>
+      </section>
+      <section>
         <div
           id="game-grid"
           class="container text-center d-flex flex-column justify-content-around"
