--- a/tres_en_lines.html
+++ b/tres_en_lines.html
@@ -152,6 +152,9 @@
           </div>
         </div>
       </section>
+      <section>
+        <p id="youwon"></p>
+      </section>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
