--- a/tres_en_lines.html
+++ b/tres_en_lines.html
@@ -153,7 +153,10 @@
         </div>
       </section>
       <section>
-        <p id="youwon"></p>
+        <button class="btn btn-success" id="reset-button">Play again?</button>
+      </section>
+      <section>
+        <p class="fw-semibold" class="col-auto col-md-9" id="you-won"></p>
       </section>
     </main>
     <script
