--- a/mayormenor.html
+++ b/mayormenor.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mayor o menor</title>
+    <title>Greater or lesser</title>
     <link
       rel="apple-touch-icon"
       sizes="57x57"
@@ -110,10 +110,14 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="scratch.html">Scratch Games</a>
+                <a class="nav-link" class="rounded-pill" href="scratch.html"
+                  >Scratch Games</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About me</a>
+                <a class="nav-link" class="rounded-pill" href="about.html"
+                  >About me</a
+                >
               </li>
             </ul>
           </div>
@@ -144,7 +148,12 @@
           required
           minlength="1"
         />
-        <input type="submit" id="run-game" value="Submit" />
+        <input
+          class="btn btn-outline-info"
+          type="submit"
+          id="run-game"
+          value="Submit"
+        />
       </form>
       <p id="answer"></p>
     </section>
