--- a/scratch.html
+++ b/scratch.html
@@ -107,7 +107,7 @@
                 <div class="col-auto col-md-3">
                     <img class="img-fluid" src="assets\images\Captura examen.PNG" alt="The final exam being played">
                 </div>
-                <div class="col-auto col-md-9">
+                <div class="col-auto col-md-9 fw-semibold">
                     <p>You can play the final exam by moving with the arrows the Little Red Square.Your
                         objective<br>
                         is to get to the Green Space to pass the game. Don't forget to get the key before and
@@ -127,7 +127,7 @@
                 <div class="col-auto col-md-3">
                     <img class="img-fluid" src="assets\images\Captura ninja.PNG" alt="Ninja fighting boss">
                 </div>
-                <div class="col-auto col-md-9">
+                <div class="col-auto col-md-9 fw-semibold">
                     <p>This game has already got the instructions on it!
                     </p>
                 </div>
@@ -144,7 +144,7 @@
                     <img class="img-fluid" src="assets\images\scratch.PNG"
                         alt="The hardest game ever being played(last level)">
                 </div>
-                <div class="col-auto col-md-9">
+                <div class="col-auto col-md-9 fw-semibold">
                     <p>You can play The hardest game ever by moving with the arrows the Little Red Square.Your
                         objective<br>
                         is to get to the Green Space to pass to the next level. Never touch blue!
