--- a/hanged-man.html
+++ b/hanged-man.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About me</title>
+    <title>hanged man</title>
     <link
       rel="apple-touch-icon"
       sizes="57x57"
@@ -89,67 +89,37 @@
     <link rel="stylesheet" href="assets\css\style.css" />
   </head>
 
-  <body class="bg-primary container">
-    <nav class="navbar navbar-expand-lg g-light bg-primary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"
-          ><img id="logo" src="assets\images\logo.jpg" alt="logo image" />
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" href="index.html">Nure's games!</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="scratch.html">Scratch Games</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <main>
-      <section>
-        <div class="row">
-          <div class="col-auto">
-            <h1>About me</h1>
+  <body class="container bg-primary">
+    <header>
+      <nav class="navbar navbar-expand-lg g-light bg-primary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html"
+            ><img id="logo" src="assets\images\logo.jpg" alt="logo image" />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="scratch.html">Scratch Games</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About me</a>
+              </li>
+            </ul>
           </div>
         </div>
-        <div class="row">
-          <div class="col-auto p-0">
-            <img
-              class="img-fluid"
-              src="assets\images\20231013_161239.jpg"
-              alt="me"
-            />
-          </div>
-          <div class="col-auto fw-semibold">
-            <p>
-              Dear users, welcome to my page. Here, I will principally talk
-              about me.
-            </p>
-          </div>
-          <div class="col-auto fw-semibold">
-            <p>
-              Hi, mi name is Nuredin Mihran Mamprelian. I live in C.A.B.A.,
-              Buenos Aires, Argentina and I am 12 years.<br />
-              Also, my favorite food is gnocchi and the color I most like is
-              yellow.
-            </p>
-          </div>
-        </div>
-      </section>
-    </main>
+      </nav>
+    </header>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
