style: :lipstick: improve scratch dropdown

--- a/index.html
+++ b/index.html
@@ -162,10 +162,18 @@
                 >
                 <ul class="dropdown-menu">
                   <li>
-                    <a class="dropdown-item" href="#">The Hardest Game Ever</a>
+                    <a class="dropdown-item" href="scratch.html"
+                      >The Hardest Game Ever</a
+                    >
                   </li>
-                  <li><a class="dropdown-item" href="#">The ninja</a></li>
-                  <li><a class="dropdown-item" href="#">The final exam</a></li>
+                  <li>
+                    <a class="dropdown-item" href="scratch.html">The ninja</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="scratch.html"
+                      >The final exam</a
+                    >
+                  </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
                     <a class="dropdown-item" href="scratch.html">All Games</a>
@@ -273,7 +281,7 @@
               alt="Connect four being played"
             />
           </div>
-          <div class="fw-semibold" class="col-auto col-md-9">
+          <div class="fw-semibold col-auto col-md-9">
             <p>
               Connect four is a two player game by turns in wich your objetive
               is<br />
@@ -298,7 +306,7 @@
               alt="Tic-tac-toe being played"
             />
           </div>
-          <div class="fw-semibold" class="col-auto col-md-9">
+          <div class="fw-semibold col-auto col-md-9">
             <p>
               Tic-tac-toe is a two player game by turns in wich your objetive
               is<br />
@@ -324,7 +332,7 @@
               alt="Greater or lesser being used"
             />
           </div>
-          <div class="fw-semibold" class="col-auto col-md-9">
+          <div class="fw-semibold col-auto col-md-9">
             <p>
               These time, my project isn't a game, this is how it works: you
               enter three random numbers<br />
@@ -343,14 +351,14 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-auto col-md-3">
+          <div class="fw-semibold col-auto col-md-3">
             <img
               class="img-fluid"
               src="assets\images\img laberinto.PNG"
               alt="laberinth being used"
             />
           </div>
-          <div class="fw-semibold" class="col-auto col-md-9">
+          <div class="fw-semibold col-auto col-md-9">
             <p>
               These project, is my best game, this is how it works: you enter
               one of thise keys: a(left)<br />
@@ -374,7 +382,7 @@
               alt="The alpinist first option"
             />
           </div>
-          <div class="fw-semibold" class="col-auto">
+          <div class="fw-semibold col-auto">
             <p>
               The alpinist (El alpinista) is a game that was originaly written
               in Argentina, so everything will be<br />
@@ -405,7 +413,7 @@
               alt="you died"
             />
           </div>
-          <div class="fw-semibold" class="col-auto col-md-9">
+          <div class="fw-semibold col-auto col-md-9">
             <p>
               You can play Hanged Man by entering ltters, if you enter the right
               ones, <br />
