--- a/hanged-man.html
+++ b/hanged-man.html
@@ -109,8 +109,76 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="scratch.html">Scratch Games</a>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                  >Javascript Games</a
+                >
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="tic-tac-toe.html"
+                      >Tic-Tac-Toe</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="dropdown-item" href="greater-or-lesser.html"
+                      >Greater or lesser</a
+                    >
+                  </li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li class="dropdown-item text-secondary">
+                    Works in progress
+                  </li>
+                  <li class="nav-item">
+                    <a class="dropdown-item" href="labyrinth.html">Labyrinth</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="connect4.html"
+                      >Connect Four</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="quiz.html">Quiz</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="hanged-man.html"
+                      >Hanged Man</a
+                    >
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                  >Scratch Games</a
+                >
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="scratch.html"
+                      >The Hardest Game Ever</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="scratch.html">The ninja</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="scratch.html"
+                      >The final exam</a
+                    >
+                  </li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item" href="scratch.html">All Games</a>
+                  </li>
+                </ul>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About me</a>
