fix: :bug: size image

--- a/about.html
+++ b/about.html
@@ -197,14 +197,14 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-auto p-0">
+          <div class="col-auto col-md-10 col-lg-8 col-xl-6 p-0">
             <img
               class="img-fluid"
               src="assets\images\20231013_161239.jpg"
               alt="me"
             />
           </div>
-          <div class="col-auto fw-semibold">
+          <div class="col-12 fw-semibold">
             <p>
               Dear users, welcome to my page. Here, I will principally talk
               about me.
