--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -89,9 +90,9 @@
     <link rel="stylesheet" href="assets\css\style.css" />
   </head>
 
-  <body class="bg-image bg-primary container">
-    <header>
-      <nav class="navbar navbar-expand-lg g-light bg-primary">
+  <body class="bg-image bg-primary container-fluid p-0">
+    <header class="sticky-top container-fluid p-0">
+      <nav class="navbar navbar-expand-md g-light bg-secondary">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html"
             ><img id="logo" src="assets\images\logo.jpg" alt="logo image" />
@@ -108,7 +109,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="align-items-center navbar-nav">
               <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
@@ -189,8 +190,8 @@
       </nav>
     </header>
 
-    <main>
-      <section>
+    <main class="m-4">
+      <section class="my-4">
         <h1 class="cool-letter">Presenting... Nure's games!</h1>
         <p class="fw-bold">
           This is a block of all my best games, from scratch to c++. I wish for
@@ -266,11 +267,13 @@
           </button>
         </div>
       </section>
-      <section>
+      <section class="my-5">
         <div class="row">
           <div class="col-auto">
-            <h2 class="cool-letter">c++ section:</h2>
-            <h3 id="connect-four">Connect four</h3>
+            <h2 class="cool-letter">Javascript:</h2>
+            </section>
+            <section class="my-5">
+            <h3 id="connect-four">Connect four:</h3>
           </div>
         </div>
         <div class="row">
@@ -290,7 +293,7 @@
           </div>
         </div>
       </section>
-      <section>
+      <section class="my-5">
         <div class="row">
           <div class="col-auto">
             <h3 id="three-in-line">
@@ -315,7 +318,7 @@
           </div>
         </div>
       </section>
-      <section>
+      <section class="my-5">
         <div class="row">
           <div class="col-auto">
             <h3 id="mayor-o-menor">
@@ -335,18 +338,17 @@
           <div class="fw-semibold col-auto col-md-9">
             <p>
               These time, my project isn't a game, this is how it works: you
-              enter three random numbers<br />
-              in the computer, and then, it should appear first the smallest
-              number, and then, biggest one.
+              enter two random numbers<br />
+              in the computer, and then, it should appear which one is bigger
             </p>
           </div>
         </div>
       </section>
-      <section>
+      <section class="my-5">
         <div class="row">
-          <div class="col-auto">
+          <div class="col-auto col-md-3">
             <h3 id="laberinth">
-              <a href="laberinth.html">Laberinth</a>
+              <a href="laberinth.html">Labyrinth</a>
             </h3>
           </div>
         </div>
@@ -361,9 +363,9 @@
           <div class="fw-semibold col-auto col-md-9">
             <p>
               These project, is my best game, this is how it works: you enter
-              one of thise keys: a(left)<br />
-              - s(down) - w(up) - d(right) to move. Your objetibe is to get to
-              the right-down corner.
+              one of thise keys: a(left)- s(down) - w(up) - d(right) to move.
+              <br />
+              Your objetibe is to get to the right-down corner.
             </p>
           </div>
         </div>
@@ -394,7 +396,7 @@
           </div>
         </div>
       </section>
-      <section>
+      <section class="my-5">
         <div class="row">
           <div class="col-auto">
             <h3 id="ahorcado">Hanged Man</h3>
