--- a/greaterorlesser.html
+++ b/greaterorlesser.html
@@ -89,9 +89,9 @@
     <link rel="stylesheet" href="assets\css\style.css" />
   </head>
 
-  <body class="container bg-primary">
-    <header>
-      <nav class="navbar navbar-expand-lg g-light bg-primary">
+  <body class="bg-image bg-primary container-fluid p-0">
+    <header class="sticky-top container-fluid p-0">
+      <nav class="navbar navbar-expand-md g-light bg-secondary">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html"
             ><img id="logo" src="assets\images\logo.jpg" alt="logo image" />
@@ -108,7 +108,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="align-items-center navbar-nav">
               <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
@@ -188,39 +188,43 @@
         </div>
       </nav>
     </header>
-    <section>
-      <p class="fw-semibold" class="lh-base">
-        Enter two numbers, this program will tell you wich one is bigger. <br />
-        Press SUBMIT when you'r finished.
-      </p>
-    </section>
-    <section>
-      <form>
-        <input
-          type="number"
-          name="num1"
-          value="0"
-          id="num1"
-          required
-          minlength="1"
-        />
-        <input
-          type="number"
-          name="num2"
-          value="0"
-          id="num2"
-          required
-          minlength="1"
-        />
-        <input
-          class="btn btn-outline-info"
-          type="submit"
-          id="run-game"
-          value="Submit"
-        />
-      </form>
-      <p id="answer"></p>
-    </section>
+
+    <main class="m-4">
+      <section class="my-4">
+        <p class="fw-semibold" class="lh-base">
+          Enter two numbers, this program will tell you wich one is bigger.
+          <br />
+          Press SUBMIT when you'r finished.
+        </p>
+      </section>
+      <section>
+        <form>
+          <input
+            type="number"
+            name="num1"
+            value="0"
+            id="num1"
+            required
+            minlength="1"
+          />
+          <input
+            type="number"
+            name="num2"
+            value="0"
+            id="num2"
+            required
+            minlength="1"
+          />
+          <input
+            class="btn btn-outline-info"
+            type="submit"
+            id="run-game"
+            value="Submit"
+          />
+        </form>
+        <p id="answer"></p>
+      </section>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
