--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -89,9 +89,9 @@
     <link rel="stylesheet" href="assets\css\style.css" />
   </head>
 
-  <body class="container bg-primary">
-    <header>
-      <nav class="navbar navbar-expand-lg g-light bg-primary">
+  <body class="bg-image bg-primary container-fluid p-0">
+    <header class="sticky-top container-fluid p-0">
+      <nav class="navbar navbar-expand-md g-light bg-secondary">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html"
             ><img id="logo" src="assets\images\logo.jpg" alt="logo image" />
@@ -108,7 +108,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="align-items-center navbar-nav">
               <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
@@ -188,8 +188,9 @@
         </div>
       </nav>
     </header>
-    <main>
-      <section>
+
+    <main class="m-4">
+      <section class="my-4">
         <div class="fw-semibold" class="col-auto col-md-9">
           <p>
             Tic-tac-toe is a two player game by turns in wich your objetive
