fix: :lipstick: improove dropdown

--- a/index.html
+++ b/index.html
@@ -150,6 +150,10 @@
                       >Hanged Man</a
                     >
                   </li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item" href="index.html">All Games</a>
+                  </li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -162,6 +166,10 @@
                   >Scratch Games</a
                 >
                 <ul class="dropdown-menu">
+                  <li class="dropdown-item text-secondary">
+                    Works in progress:
+                  </li>
+                  <li><hr class="dropdown-divider" /></li>
                   <li>
                     <a class="dropdown-item" href="scratch.html"
                       >The Hardest Game Ever</a
@@ -297,7 +305,7 @@
         <div class="row">
           <div class="col-auto">
             <h3 id="three-in-line">
-              <a href="tres_en_lines.html">Tic-tac-toe</a>
+              <a href="Tic-tac-toe.html">Tic-tac-toe</a>
             </h3>
           </div>
         </div>
@@ -322,7 +330,7 @@
         <div class="row">
           <div class="col-auto">
             <h3 id="mayor-o-menor">
-              <a href="mayormenor.html">Greater or lesser</a>
+              <a href="Greater-or-lesser.html">Greater or lesser</a>
             </h3>
           </div>
         </div>
@@ -348,7 +356,7 @@
         <div class="row">
           <div class="col-auto col-md-3">
             <h3 id="laberinth">
-              <a href="laberinth.html">Labyrinth</a>
+              <a>Labyrinth</a>
             </h3>
           </div>
         </div>
