--- a/index.html
+++ b/index.html
@@ -279,9 +279,8 @@
         <div class="row">
           <div class="col-auto">
             <h2 class="cool-letter">Javascript:</h2>
-            </section>
-            <section class="my-5">
-            <h3 id="connect-four">Connect four:</h3>
+
+            <h3 id="connect-four my-5">Connect four:</h3>
           </div>
         </div>
         <div class="row">
@@ -433,6 +432,16 @@
         </div>
       </section>
     </main>
+    <footer class="container-fluid p-0">
+      <div class="row">
+        <div class="col">
+          <p class="p-4 m-0 fw-semibold">
+            Created by Rory Patrick Sheridan, and assisted by Nuredin Mihran
+            Mamprelian.
+          </p>
+        </div>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
