--- a/scratch.html
+++ b/scratch.html
@@ -162,7 +162,7 @@
                 >
                 <ul class="dropdown-menu">
                   <li>
-                    <a class="dropdown-item" href="scratch.html"
+                    <a class="dropdown-item my-5" href="scratch.html"
                       >The Hardest Game Ever</a
                     >
                   </li>
@@ -336,6 +336,16 @@
         </div>
       </section>
     </main>
+    <footer class="container-fluid p-0">
+      <div class="row">
+        <div class="col">
+          <p class="p-4 m-0 fw-semibold">
+            Created by Rory Patrick Sheridan, and assisted by Nuredin Mihran
+            Mamprelian.
+          </p>
+        </div>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
